// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableCellResizable should render 1`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableBody
      aria-live="polite"
    >
      <tbody
        aria-live="polite"
      >
        <TableRow>
          <tr>
            <TableCellResizable>
              <td />
            </TableCellResizable>
          </tr>
        </TableRow>
      </tbody>
    </TableBody>
  </table>
</Table>
`;

exports[`DataTable.TableCellResizable should render with resizable columns 1`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableBody
      aria-live="polite"
    >
      <tbody
        aria-live="polite"
      >
        <TableRow>
          <tr>
            <TableCellResizable
              colKey="aKey"
              key="aKey"
            >
              <td />
            </TableCellResizable>
          </tr>
        </TableRow>
      </tbody>
    </TableBody>
  </table>
</Table>
`;
